<resources>
    <string name="app_name">Bykea</string>
    <string name="bykea">Bykea</string>
    <string name="title_activity_ride">RideActivity</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rao Aaraf Younus</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Missed Calls</string>
    <string name="menu_booking">Bookings</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_works">How it works</string>
    <string name="menu_Contact">Contact Us</string>
</resources>