<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_booking" />

        <item
            android:id="@+id/nav_wallet"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_works"
            android:title="@string/menu_works" />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/menu_Contact" />
    </group>
</menu>